# rust_drg_group_tool

./: Cargo.toml  README.md  main.rs
data/: MDCZ_main_dis_list.json  MDC_main_dis.json  adrg_dis_opt.json  adrg_type_dict.json  all_opt_sheet.txt  cc_mcc_dict.json  exclusive_dict.json  mdc_map_adrg.json
src/: main.rs
