[package]
name = "rust_drg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json =  "1.0"
polars = { version = "0.27.2", features = ["lazy", "temporal", "json", "parquet"] }
